[package]
name = "PersonalSkillsEnhanced"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = {git = "https://github.com/ultimate-research/skyline-rs", rev = "ba4706a6faa1a705b37cc962826b0426d72bf604"}
libc-nnsdk = { git = "https://github.com/ultimate-research/libc-nnsdk", rev = "c83d92a930852db6028442dbba930aa14012172c"}
unity = { git = "https://github.com/DivineDragonFanClub/unity"}
engage = { git = "https://github.com/DivineDragonFanClub/engage", rev = "c192434d5c7b313f400245a0d08c65252ce3b1d7"}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
num = "0.4.1"
miniserde = "0.1.41"
lazy_static = "1.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
